Fixed bug causing items to overlap when not needed

--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -2,7 +2,7 @@
     animation-iteration-count: infinite;
     animation-name: raining;
     top: -100px;
-    z-index: -1;
+    z-index: -3;
 }
 
 .shape {
