--- a/src/styles/components/_sidebar-menu.scss
+++ b/src/styles/components/_sidebar-menu.scss
@@ -21,7 +21,6 @@
     position: fixed;
     top: 0;
     transition: 0.5s;
-    z-index: 1;
     width: 0;
 
     a {
