--- a/src/styles/screens/_landing-screen.scss
+++ b/src/styles/screens/_landing-screen.scss
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     width: 95%;
+    z-index: -1;
 
     a {
         text-align: right;
