--- a/src/styles/screens/_projects-screen.scss
+++ b/src/styles/screens/_projects-screen.scss
@@ -1,14 +1,14 @@
 .projects__container {
     gap: 50px;
     justify-content: center;
-    margin-bottom: 100px;
-    margin-top: 50px;
+    margin: 100px auto;
     width: 90%;
 }
 
 .projects__project-container {
     padding: 10px;
     width: 310px;
+    z-index: -2;
 
     h1 {
         margin: 5px 0;
